--- a/model_title/coatt_06_coattention_several_spaces_model_title_withou_GRU.ipynb
+++ b/model_title/coatt_06_coattention_several_spaces_model_title_withou_GRU.ipynb
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "169500it [01:01, 2757.67it/s]\n"
+      "169500it [01:01, 2756.64it/s]\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18834it [00:06, 2875.43it/s]\n"
+      "18834it [00:05, 3271.48it/s]\n"
      ]
     }
    ],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,11 +272,8 @@
     "    affinity1_titleA_titleB = coattention_method(context_titleA,context_titleB,context_titleA)\n",
     "    affinity1_titleB_titleA = coattention_method(context_titleB,context_titleA,context_titleB)\n",
     "    \n",
-    "    context2_coattentionA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity1_titleA_titleB)\n",
-    "    context2_coattentionB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity1_titleB_titleA)\n",
-    "    \n",
-    "    learned_vector3 = tf.keras.layers.Flatten()(context2_coattentionA)\n",
-    "    learned_vector4 = tf.keras.layers.Flatten()(context2_coattentionB)\n",
+    "    learned_vector3 = tf.keras.layers.Flatten()(affinity1_titleA_titleB)\n",
+    "    learned_vector4 = tf.keras.layers.Flatten()(affinity1_titleB_titleA)\n",
     "    \n",
     "    final_vector = tf.keras.layers.Concatenate()([learned_vector1,learned_vector2,learned_vector3,learned_vector4])\n",
     "    \n",
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,18 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"coattention_several_spaces_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"coattention2_several_spaces_model_title_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,87 +338,25 @@
       "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f16f43e9d08> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f16f43e9d08> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.3051 - accuracy: 0.8784\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.92508, saving model to coattention_several_spaces_model_title_01_0.9251.h5\n",
-      "169500/169500 [==============================] - 183s 1ms/sample - loss: 0.3051 - accuracy: 0.8785 - val_loss: 0.1975 - val_accuracy: 0.9251\n",
+      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f046616dae8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7f046616dae8> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.2935 - accuracy: 0.8846\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.92328, saving model to coattention2_several_spaces_model_title_01_0.9233.h5\n",
+      "169500/169500 [==============================] - 130s 766us/sample - loss: 0.2935 - accuracy: 0.8846 - val_loss: 0.1937 - val_accuracy: 0.9233\n",
       "Epoch 2/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.2014 - accuracy: 0.9248\n",
-      "Epoch 00002: val_accuracy improved from 0.92508 to 0.93023, saving model to coattention_several_spaces_model_title_02_0.9302.h5\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.2014 - accuracy: 0.9248 - val_loss: 0.1792 - val_accuracy: 0.9302\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.2014 - accuracy: 0.9247\n",
+      "Epoch 00002: val_accuracy improved from 0.92328 to 0.93172, saving model to coattention2_several_spaces_model_title_02_0.9317.h5\n",
+      "169500/169500 [==============================] - 121s 712us/sample - loss: 0.2014 - accuracy: 0.9247 - val_loss: 0.1738 - val_accuracy: 0.9317\n",
       "Epoch 3/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1772 - accuracy: 0.9330\n",
-      "Epoch 00003: val_accuracy improved from 0.93023 to 0.93464, saving model to coattention_several_spaces_model_title_03_0.9346.h5\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1772 - accuracy: 0.9330 - val_loss: 0.1668 - val_accuracy: 0.9346\n",
+      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1777 - accuracy: 0.9331\n",
+      "Epoch 00003: val_accuracy improved from 0.93172 to 0.93204, saving model to coattention2_several_spaces_model_title_03_0.9320.h5\n",
+      "169500/169500 [==============================] - 118s 699us/sample - loss: 0.1777 - accuracy: 0.9330 - val_loss: 0.1672 - val_accuracy: 0.9320\n",
       "Epoch 4/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1617 - accuracy: 0.9383\n",
-      "Epoch 00004: val_accuracy improved from 0.93464 to 0.93852, saving model to coattention_several_spaces_model_title_04_0.9385.h5\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1618 - accuracy: 0.9383 - val_loss: 0.1591 - val_accuracy: 0.9385\n",
+      "169472/169500 [============================>.] - ETA: 0s - loss: 0.1629 - accuracy: 0.9386\n",
+      "Epoch 00004: val_accuracy improved from 0.93204 to 0.93719, saving model to coattention2_several_spaces_model_title_04_0.9372.h5\n",
+      "169500/169500 [==============================] - 119s 701us/sample - loss: 0.1629 - accuracy: 0.9386 - val_loss: 0.1616 - val_accuracy: 0.9372\n",
       "Epoch 5/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1505 - accuracy: 0.9426\n",
-      "Epoch 00005: val_accuracy did not improve from 0.93852\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1505 - accuracy: 0.9426 - val_loss: 0.1608 - val_accuracy: 0.9382\n",
-      "Epoch 6/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1399 - accuracy: 0.9455\n",
-      "Epoch 00006: val_accuracy improved from 0.93852 to 0.93990, saving model to coattention_several_spaces_model_title_06_0.9399.h5\n",
-      "169500/169500 [==============================] - 171s 1ms/sample - loss: 0.1398 - accuracy: 0.9456 - val_loss: 0.1583 - val_accuracy: 0.9399\n",
-      "Epoch 7/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1318 - accuracy: 0.9482\n",
-      "Epoch 00007: val_accuracy did not improve from 0.93990\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1318 - accuracy: 0.9482 - val_loss: 0.1594 - val_accuracy: 0.9385\n",
-      "Epoch 8/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1224 - accuracy: 0.9514\n",
-      "Epoch 00008: val_accuracy did not improve from 0.93990\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1225 - accuracy: 0.9514 - val_loss: 0.1734 - val_accuracy: 0.9394\n",
-      "Epoch 9/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1166 - accuracy: 0.9533\n",
-      "Epoch 00009: val_accuracy improved from 0.93990 to 0.94000, saving model to coattention_several_spaces_model_title_09_0.9400.h5\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1166 - accuracy: 0.9533 - val_loss: 0.1986 - val_accuracy: 0.9400\n",
-      "Epoch 10/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1096 - accuracy: 0.9555\n",
-      "Epoch 00010: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1097 - accuracy: 0.9555 - val_loss: 0.1963 - val_accuracy: 0.9386\n",
-      "Epoch 11/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.1046 - accuracy: 0.9572\n",
-      "Epoch 00011: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.1046 - accuracy: 0.9572 - val_loss: 0.2027 - val_accuracy: 0.9373\n",
-      "Epoch 12/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0991 - accuracy: 0.9593\n",
-      "Epoch 00012: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0991 - accuracy: 0.9593 - val_loss: 0.2234 - val_accuracy: 0.9384\n",
-      "Epoch 13/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0944 - accuracy: 0.9608\n",
-      "Epoch 00013: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0944 - accuracy: 0.9608 - val_loss: 0.2561 - val_accuracy: 0.9373\n",
-      "Epoch 14/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0903 - accuracy: 0.9621\n",
-      "Epoch 00014: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0903 - accuracy: 0.9621 - val_loss: 0.2271 - val_accuracy: 0.9359\n",
-      "Epoch 15/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0866 - accuracy: 0.9640\n",
-      "Epoch 00015: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0866 - accuracy: 0.9640 - val_loss: 0.2626 - val_accuracy: 0.9386\n",
-      "Epoch 16/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0822 - accuracy: 0.9651\n",
-      "Epoch 00016: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0823 - accuracy: 0.9651 - val_loss: 0.2901 - val_accuracy: 0.9384\n",
-      "Epoch 17/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0815 - accuracy: 0.9646\n",
-      "Epoch 00017: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0815 - accuracy: 0.9646 - val_loss: 0.2675 - val_accuracy: 0.9364\n",
-      "Epoch 18/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0757 - accuracy: 0.9678\n",
-      "Epoch 00018: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0757 - accuracy: 0.9678 - val_loss: 0.2784 - val_accuracy: 0.9371\n",
-      "Epoch 19/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0744 - accuracy: 0.9680\n",
-      "Epoch 00019: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0744 - accuracy: 0.9680 - val_loss: 0.3152 - val_accuracy: 0.9370\n",
-      "Epoch 20/20\n",
-      "169440/169500 [============================>.] - ETA: 0s - loss: 0.0715 - accuracy: 0.9691\n",
-      "Epoch 00020: val_accuracy did not improve from 0.94000\n",
-      "169500/169500 [==============================] - 170s 1ms/sample - loss: 0.0715 - accuracy: 0.9691 - val_loss: 0.2823 - val_accuracy: 0.9386\n"
+      " 94016/169500 [===============>..............] - ETA: 51s - loss: 0.1496 - accuracy: 0.9422"
      ]
     }
    ],
